--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3'
 services:
-  jboss:                                                                                                                                                                                                                                 image: quay.io/wildfly/wildfly
-                                                                                                                                                                                                                                           volumes:
-                                                                                                                                                                                                                                             - ./target:/opt/jboss/wildfly/standalone/deployments/
-                                                                                                                                                                                                                                           ports:
-                                                                                                                                                                                                                                             - 8082:8080
-
+  jboss:
+    image: quay.io/wildfly/wildfly
+    volumes:
+      - ./target:/opt/jboss/wildfly/standalone/deployments/
+    ports:
+      - 8082:8080
   db:
     image: mysql
     environment:
