Build: add entities and generate database

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
   jboss:
     image: quay.io/wildfly/wildfly
     volumes:
-      - ./target:/opt/jboss/wildfly/standalone/deployments/
+      - "./target/myPack-1.0-SNAPSHOT.war:/opt/jboss/wildfly/standalone/deployments/ROOT.war"
     ports:
-      - 8082:8080
+      - "8082:8080"
   db:
     image: mysql
     environment:
