--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ services:
   jboss:
     image: quay.io/wildfly/wildfly
     volumes:
-      - ./target:/opt/jboss/wildfly/standalone/deployments/
+#      - ./target/myPack-1.war.failed:/opt/jboss/wildfly/standalone/deployments/myPack.war
+      - ./target:/opt/jboss/wildfly/standalone/deployments
     ports:
       - 8082:8080
   db:
