--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.example</groupId>
     <artifactId>myPack</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1</version>
     <name>myPack</name>
     <packaging>war</packaging>
 
