--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,8 @@ services:
   jboss:
     image: quay.io/wildfly/wildfly
     volumes:
-<<<<<<< HEAD
-#      - ./target/myPack-1.war.failed:/opt/jboss/wildfly/standalone/deployments/myPack.war
       - ./target:/opt/jboss/wildfly/standalone/deployments
-||||||| 345d1ee
-      - ./target:/opt/jboss/wildfly/standalone/deployments/
-=======
-      - "./target/myPack-1.0-SNAPSHOT.war:/opt/jboss/wildfly/standalone/deployments/ROOT.war"
->>>>>>> main
+#      - "./target/myPack-1.0-SNAPSHOT.war:/opt/jboss/wildfly/standalone/deployments/ROOT.war"
     ports:
       - "8082:8080"
   db:
